<resources>
    <string name="app_name">Reading Tracker</string>
    <string name="title">Title</string>
    <string name="status">Status: %s</string>
    <string name="status2">Status</string>
    <string name="page">Page: %d/%d</string>
    <string name="page_match_to_replace">Page: </string>
    <string name="current_page">Current page</string>
    <string name="max_num_of_pages">Number of all pages</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="removing_are_you_sure">Are you sure you want to remove %s?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="removed">Item removed</string>
    <string name="add">add</string>
    <string name="progress">Progress</string>
    <string name="overall_progress">Reading Progress</string>
    <string name="overall_progress_text">%d/%d</string>
    <string name="book_manga_image">book or manga image</string>
    <string name="sort">sort</string>
    <string name="empty_title_alert">Title cannot be empty</string>
    <string name="status_not_started">Not started</string>
    <string name="status_reading">Reading</string>
    <string name="status_completed">Completed</string>
    <string name="page_error">The current reading page cannot exceed the maximum number of pages</string>
    <string name="book_finished">You have already reached the maximum page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="available_status">
        <item>Not started</item>
        <item>Reading</item>
        <item>Completed</item>
        <item>Up to date</item>
        <item>Dropped</item>
        <item>Other</item>
    </string-array>
</resources>